--- a/proyecto_app_calculador_danos_dofus_touch/style.css
+++ b/proyecto_app_calculador_danos_dofus_touch/style.css
@@ -1,4 +1,4 @@
-body{
+/* body{
     
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    
@@ -6,7 +6,7 @@ body{
     background: url(dofus-image.jpg) ;
     background-repeat: no-repeat;
     background-size: cover;
-}
+} */
 #boton{
     
     display: block;
@@ -29,13 +29,7 @@ body{
     border-radius: 20px;
     
 
-}/*
-#el-real{
-    
-    
-    background-size: 100% 100%;
-    border: 0.01px solid white;
-}*/
+}
 main{
 
     background:white;
@@ -67,6 +61,15 @@ h1{
     margin-top: -13px;
     margin-left: 50px;
     
+}
+
+
+@media (max-width: 576px) { 
+    
+    .responsive{
+        display:flex;
+        flex-flow: column nowrap;
+    }
 }
 
 
