updated the dofus touch calculator project and rename the crud html/css/js project to notes

--- a/proyecto_app_calculador_danos_dofus_touch/style.css
+++ b/proyecto_app_calculador_danos_dofus_touch/style.css
@@ -1,4 +1,4 @@
-/* body{
+body{
     
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    
@@ -6,7 +6,7 @@
     background: url(dofus-image.jpg) ;
     background-repeat: no-repeat;
     background-size: cover;
-} */
+}
 #boton{
     
     display: block;
